@@ -1,5 +1,7 @@
 *SVN*
 
+* Out-of-range Time calculations transparently overflow to DateTime.  #7706 [Geoff Buesing]
+
 * DateTime calculations analogous to the Date and Time extensions.  #7693 [Geoff Buesing]
 
 * Give DateTime correct .to_s implementations, lets it play nice with ActiveRecord quoting.  #7649 [Geoff Buesing]
